--- a/front_end-react/src/containers/Header/Header.scss
+++ b/front_end-react/src/containers/Header/Header.scss
@@ -27,7 +27,7 @@
     flex-direction: column;
   }
   @media screen and (max-width: 2000px) {
-    padding: 6rem 1rem 2rem;
+    padding: 10rem 1rem 2rem;
   }
 
   &-info {
@@ -48,14 +48,140 @@
     justify-content: flex-end;
     align-items: flex-end;
     flex-direction: column;
-    .badge-cmp,
+    .badge__cmp,
     .tag-cmp {
+      padding: 1rem 2rem;
+      background: var(--white-color);
+      border: var(--white-color);
+      border-radius: 15px;
+      flex-direction: row;
+      width: auto;
+      box-shadow: 0, 0, 20px rgba(0, 0, 0, 0.2);
     }
-    padding: 1rem 2rem;
-    border: var(--white-color);
-    border-radius: 15px;
-    flex-direction: row;
-    width: auto;
-    box-shadow: 0, 0, 20px rgba(0, 0, 0, 0.1);
+    .tag-cmp {
+      flex-direction: column;
+      margin-top: 3rem;
+      p {
+        width: 100%;
+        text-transform: uppercase;
+        text-align: right;
+      }
+    }
+    span {
+      font-size: 2.5rem;
+      @media screen and(min-width:2000px) {
+        font-size: 5rem;
+      }
+    }
+    @media screen and(max-width:1200px) {
+      align-items: flex-start;
+      justify-content: flex-start;
+    }
+  }
+  &-circles {
+    display: flex;
+    flex: 0.75;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    height: 100%;
+    margin-left: 1rem;
+
+    div {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+
+      background: var(--white-color);
+      box-shadow: 0, 0, 20px rgba(0, 0, 0, 0.1);
+      img {
+        width: 60%;
+        height: 60%;
+      }
+    }
+
+    div:nth-child(1) {
+      width: 50px;
+      height: 50px;
+    }
+    div:nth-child(2) {
+      width: 100px;
+      height: 100px;
+      margin: 1.75rem;
+    }
+    div:nth-child(3) {
+      width: 150px;
+      height: 150px;
+      margin: 3.5rem;
+    }
+    div:nth-child(4) {
+      width: 100px;
+      height: 100px;
+      margin: 1.75rem;
+    }
+    div:nth-child(5) {
+      width: 50px;
+      height: 50px;
+    }
+    @media screen and(min-width:2000px) {
+      div:nth-child(1) {
+        width: 200px;
+        height: 200px;
+      }
+      div:nth-child(2) {
+        width: 400px;
+        height: 400px;
+      }
+      div:nth-child(3) {
+        width: 600px;
+        height: 600px;
+      }
+      div:nth-child(4) {
+        width: 100px;
+        height: 100px;
+      }
+      div:nth-child(5) {
+        width: 200px;
+        height: 200px;
+      }
+    }
+    @media screen and(max-width:1200px) {
+      width: 100%;
+      flex-direction: row;
+      flex-wrap: wrap;
+      margin-left: 0;
+
+      div {
+        margin: 1rem;
+      }
+    }
+  }
+
+  &-img {
+    flex: 1;
+    height: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+
+    position: relative;
+
+    img {
+      width: 100%;
+      object-fit: contain;
+      z-index: 1;
+    }
+    .overlay_circle {
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      z-index: 0;
+      width: 100%;
+      height: 90%;
+    }
+    @media screen and(min-width:2000px) {
+      margin: 2rem 0;
+    }
   }
 }
